--- a/client/public/index.html
+++ b/client/public/index.html
@@ -16,6 +16,6 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <script src="https://maps.googleapis.com/maps/api/js?key=%REACT_APP_GOOGLE_MAPS_API_KEY%&libraries=places"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAAsae7hTeyyWg8jKheIG3aU-lRX7AYQAM&libraries=places"></script>
   </body>
 </html>
